--- a/examples.ipynb
+++ b/examples.ipynb
@@ -16,7 +16,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "d1ea0a5a-5628-4ce3-bf29-bf8a66cb550c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -61,7 +63,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "b094123a-b277-4514-98c8-abfe4403f8f7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
